--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/autumnchris/treemap-sales-diagram#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.7.2",
     "d3": "^7.8.0",
     "normalize.css": "^5.0.0",
     "react": "^17.0.2",
